dataclients/kubernetes/testdata/ingressV1/ingress-data/endpointslice-conditions.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: namespace1
  name: ingress1
spec:
  defaultBackend:
    service:
      name: service1
      port:
        name: port1
  rules:
  - host: test.example.org
    http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            name: service1
            port:
              name: port1
---
apiVersion: v1
kind: Service
metadata:
  namespace: namespace1
  name: service1
spec:
  clusterIP: 1.2.3.4
  ports:
  - name: port1
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    app: myapp-deployment
    kubernetes.io/service-name: service1
  namespace: namespace1
  name: service1-foo
endpoints:
  - addresses:
    - 42.0.1.1
    conditions:
      ready: true
      serving: true
      terminating: false
    zone: my-zone-1
  - addresses:
    - 42.0.1.2
    conditions:
      ready: true
    zone: my-zone-2
  - addresses:
    - 42.0.1.3
    conditions:
      serving: true
    zone: my-zone-3
  - addresses:
    - 42.0.1.4
    zone: my-zone-1
  - addresses:
    - 42.0.1.5
    conditions:
      serving: false
      terminating: false
    zone: my-zone-2
ports:
  - name: port1
    port: 8080
    protocol: TCP
---
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    app: myapp-deployment
    kubernetes.io/service-name: service1
  namespace: namespace1
  name: service1-bar
endpoints:
  - addresses:
    - 42.0.2.1
    conditions:
      ready: true
      serving: true
      terminating: true
    zone: my-zone-1
  - addresses:
    - 42.0.2.2
    conditions:
      ready: false
      serving: false
      terminating: false
    zone: my-zone-2
  - addresses:
    - 42.0.2.3
    conditions:
      terminating: true
    zone: my-zone-3
ports:
  - name: port1
    port: 8080
    protocol: TCP
